# core_system/src/app/Http/Controllers/SubjectController.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Resources\ProjectResource;
 use App\Http\Resources\SubjectResource;
 use App\Http\Services\SubjectService;
 use Illuminate\Http\JsonResponse;
@@ -27,14 +28,12 @@ class SubjectController extends Controller
      *
      * @param $repositoryID
      *
-     * @return SubjectResource|\Illuminate\Http\Response
+     * @return SubjectResource|JsonResponse
      */
     public function index($repositoryID)
     {
         try {
-
-            $data = $this->subjectService->getSubjectsFromRepository($repositoryID);
-
+            $data = $this->subjectService->getSubjectsAtRepository($repositoryID);
             return new SubjectResource($data);
 
         } catch (\Exception | \Throwable $e) {
@@ -54,6 +53,7 @@ class SubjectController extends Controller
      */
     public function store(Request $request, $repositoryID): JsonResponse
     {
+        Log::info($request->all());
         try {
 
             $this->subjectService->storeSubjectAtRepository($repositoryID, $request->all());
@@ -63,6 +63,22 @@ class SubjectController extends Controller
         } catch (\Exception | \Throwable $e) {
             Log::error($e);
             return response()->json($e->getMessage(), 500);
+        }
+    }
+
+    /**
+     * @param $repositoryID
+     * @param $subjectID
+     * @return ProjectResource|JsonResponse
+     */
+    public function showProjects($repositoryID, $subjectID)
+    {
+        try {
+            $data = $this->subjectService->getProjectsAtSubjectOfRepository($subjectID, $repositoryID);
+            return new ProjectResource($data);
+        } catch (\Exception | \Throwable $e) {
+            Log::error($e);
+            return response()->json([$e->getMessage()], 500);
         }
     }
 
