# subject_layer/src/app/Http/Controllers/Api/Controller.php
@@ -39,7 +39,7 @@ class Controller
 
      *
      * @OA\Tag(
-     *     name="Projects",
+     *     name="Subjects",
      *     description="API Endpoints of Subjects Layer"
      * )
      */
